--- a/probe_toolkit.conf
+++ b/probe_toolkit.conf
@@ -39,7 +39,8 @@ output = {	'height'		: 0,				# 0 means auto else use screen height in characters
 			'out_error'		: '1',
 			'out_warn'		: '0',
 			'out_info'		: '1',
-			'out_notice'	: '1'
+			'out_notice'	: '1',
+			'disable_color'	: '1'
 }
 db_conf = {	'db_type'		: '1', 
 			'pg_host'		: '127.0.0.1',
@@ -48,10 +49,10 @@ db_conf = {	'db_type'		: '1',
 			'pg_db'			: 'probe',
 			'db_sqlite_db'	: 'probe.db' }
 
-# Config for the probe_send script.
+# Config for the probesend script.
 # Wich is handy for debugging and flood testing.
 # Can be handy for fuzzing either, wip.
-probe_send = { 'mask_files'	: ['./masks/nl_ssid.masks','./masks/us_ssid.masks'],
+probesend = { 'mask_files'	: ['./masks/nl_ssid.masks','./masks/us_ssid.masks'],
 			'mon_if'		: 'wlan0',
 			'interval'		: 5,				# interval in seconds - set to 0 (sec) for very agressive (flood)
 			'count'			: 1,				# probe count
