Added option to also dump the probe request packets (for debugging).

--- a/probe_toolkit.conf
+++ b/probe_toolkit.conf
@@ -23,38 +23,39 @@
 
 		db_sqlite_db	- path to sqlite db (if it doens't exist, it will create it if it has the permissions to do so.)
 """
-general = { 'use_sudo'		: 1,
-			'mon_if'		: 'wlan0',
-			'max_lines'		: 0			
+general = { 'use_sudo'		: True,
+		'dumpfile'	: 'dump.dump',			# File to dump to if dump is True (for debugging)
+		'dump'		: False,
+		'mon_if'	: 'wlan0',
 }
-output = {	'height'		: 0,				# 0 means auto else use screen height in characters
-			'width'			: 0,
-			'log_file'		: 'probe.log',
-			'log_debug'		: '0',				# 0 means false 1 means true
-			'log_error'		: '1',
-			'log_warn'		: '1',
-			'log_info'		: '0',
-			'log_notice'	: '0',
-			'out_debug'		: '0',
-			'out_error'		: '1',
-			'out_warn'		: '0',
-			'out_info'		: '1',
-			'out_notice'	: '1',
-			'disable_color'	: True,
-			'time_ago_format': True
+output = {	'height'	: 0,				# 0 means auto else use screen height in characters
+		'width'		: 0,
+		'log_file'	: 'probe.log',
+		'log_debug'	: '0',				# 0 means false 1 means true
+		'log_error'	: '1',
+		'log_warn'	: '1',
+		'log_info'	: '0',
+		'log_notice'	: '0',
+		'out_debug'	: '0',
+		'out_error'	: '1',
+		'out_warn'	: '0',
+		'out_info'	: '1',
+		'out_notice'	: '1',
+		'disable_color'	: True,
+		'time_ago_format': True
 }
-db_conf = {	'db_type'		: '1', 
-			'pg_host'		: '127.0.0.1',
-			'pg_user'		: 'probe_toolkit',
-			'pg_pass'		: 'password',
-			'pg_db'			: 'probe',
-			'db_sqlite_db'	: 'probe.db' }
+db_conf = {	'db_type'	: '1',
+		'pg_host'	: '127.0.0.1',
+		'pg_user'	: 'probe_toolkit',
+		'pg_pass'	: 'password',
+		'pg_db'		: 'probe',
+		'db_sqlite_db'	: 'probe.db' }
 
 # Config for the probesend script.
 # Wich is handy for debugging and flood testing.
 # Can be handy for fuzzing either, wip.
 probesend = { 'mask_files'	: ['./masks/nl_ssid.masks','./masks/us_ssid.masks'],
-			'mon_if'		: 'wlan0',
-			'interval'		: 5,				# interval in seconds - set to 0 (sec) for very agressive (flood)
-			'count'			: 1,				# probe count
+		'mon_if'	: 'wlan0',
+		'interval'	: 5,				# interval in seconds - set to 0 (sec) for very agressive (flood)
+		'count'		: 1,				# probe count
 }
