Added option in probecap config to set capture size wich tcpdump will use. Increase the cap_size value if you get truncated packages and you don't want that. But don't go to high.

--- a/probecap.conf
+++ b/probecap.conf
@@ -26,6 +26,7 @@ general = { 'use_sudo'		: True,
 		'dumpfile'	: 'dump.dump',			# File to dump to if dump is True (for debugging)
 		'dump'		: False,
 		'mon_if'	: 'wlan0',
+		'cap_size'	: 256				# Make it bigger if you get truncated packets and you don't want that.
 }
 output = {	'height'	: 0,				# 0 means auto else use screen height in characters
 		'width'		: 0,
@@ -43,7 +44,7 @@ output = {	'height'	: 0,				# 0 means auto else use screen height in characters
 		'disable_color'	: True,
 		'time_ago_format': True
 }
-db_conf = {	'db_type'	: '1',
+db_conf = {	'db_type'	: '2',
 		'pg_host'	: '127.0.0.1',
 		'pg_user'	: 'probe_toolkit',
 		'pg_pass'	: 'password',
