* device fingerprinting from probe requests class (fingerdict).  * probe request packet unpacking / parsing class (pkt_handler).
code is at beginning stage, do NOT expect it to work flawless/efficient/stable

--- a/probecap.conf
+++ b/probecap.conf
@@ -25,8 +25,9 @@
 general = { 'use_sudo'		: True,
 		'dumpfile'	: 'dump.dump',			# File to dump to if dump is True (for debugging)
 		'dump'		: False,
+		'fingerdict'	: True,
 		'mon_if'	: 'wlan0',
-		'cap_size'	: 256				# Make it bigger if you get truncated packets and you don't want that.
+		'cap_size'	: 320				# Make it bigger if you get truncated packets and you don't want that.
 }
 output = {	'height'	: 0,				# 0 means auto else use screen height in characters
 		'width'		: 0,
